<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#fec9bb">

        <Button
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/back"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="11dp"
            android:layout_marginLeft="15dp"
            android:id="@+id/back_tem"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tem_title"
            android:layout_centerInParent="true"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/tem_title"/>

        <Button
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/share"
            android:layout_alignParentRight="true"
            android:layout_marginTop="11dp"
            android:layout_marginRight="15dp"
            android:id="@+id/tem_share"/>

    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#e5b3a8"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#fec8bb"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tem_tem"
            android:textSize="40sp"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:layout_marginTop="35sp"
            android:id="@+id/tem_tem"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tem_unit"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:id="@+id/tem_unit"/>

    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list_3"></ListView>

</LinearLayout>