<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_first"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:orientation="vertical"
    tools:context="com.example.zch_pc.mybaby.FirstActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#fec9bb">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_centerInParent="true"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/first_title"/>

        <Button
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/share"
            android:layout_alignParentRight="true"
            android:layout_marginTop="11dp"
            android:layout_marginRight="15dp"
            android:id="@+id/first_share"/>

    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#e5b3a8"></View>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:background="@drawable/background_1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:textSize="40sp"
            android:layout_marginTop="80dp"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:id="@+id/first_state"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/informatiom_1"
            android:layout_marginTop="15dp"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:id="@+id/information_1"/>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:id="@+id/relative_1">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/notice_1"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp"
            android:id="@+id/notice"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice_1"
            android:layout_toRightOf="@id/notice"
            android:textSize="18sp"
            android:layout_marginTop="9dp"
            android:textColor="#23AD39"
            android:id="@+id/notice_1"/>

        <Button
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/delete_1"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:id="@+id/delete_1"/>


    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list_1" />


    </RelativeLayout>

</LinearLayout>
